//送礼物
public interface GiveGift
{
	void GiveDolls();
	void GiveFlowers();
	void GiveChocolate();
}